k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: munjo-portfolio
spec:
  selector:
    app: munjo-portfolio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
